--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,7 +14,7 @@ env:
   IMAGE_REGISTRY_NS: walkerdu
 jobs:
   ci:
-    runs-on: ubuntu:24.04
+    runs-on: ubuntu:latest
     steps:
     - name: Check out
       uses: actions/checkout@v4
