--- a/chart/wecom-read-it-later/values.yaml
+++ b/chart/wecom-read-it-later/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: walkerdu/wecom-read-it-later
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -37,8 +37,11 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
-  port: 80
+  type: LoadBalancer 
+  port: 10001
+  annotations: 
+    # 外网clb
+    service.kubernetes.io/tke-existed-lbid: lb-b0etqk0h
 
 ingress:
   enabled: false
