--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,7 +13,7 @@ env:
   IMAGE_REGISTRY_URL: docker.io
   IMAGE_REGISTRY_NS: walkerdu
 jobs:
-  ci:
+  ci-cd:
     runs-on: ubuntu:latest
     steps:
     - name: Check out
@@ -57,5 +57,34 @@ jobs:
           #docker login --username xxx --password xxx mirrors.tencent.com
           docker push $image_target
           date
+        done
+    - name: Build the Chart
+      run: |
+        set -x
+        cd chart
+        for service_name in `ls chart`; do
+            chart_path="$service_name/Chart.yaml"
+            if [ ! -f $chart_path ];then
+                echo "$chart_path not exist"
+                exit -2
+            fi
+        
+            app_version=`grep -e ^appVersion $chart_path|awk -F '[ |"]' '{if(NF>2){print $(NF-1)}else{print $NF}}'`
+            chart_version=`grep -e ^version $chart_path|awk -F '[ |"]' '{if(NF>2){print $(NF-1)}else{print $NF}}'`
+        
+            image_target="$IMAGE_REGISTRY_URL/$IMAGE_REGISTRY_NS/$service_name:$app_version-$git_branch_name.$git_checkout_sha_short"
+            image_exist=`docker images -f "reference=$image_target"|wc -l`
+            if [ $image_exist -ne 2 ];then
+                echo "$image_target not exist"
+                exit -3
+            fi
+        
+            app_version=$app_version-${{git_branch_name}}.${{git_checkout_sha_short}}
+            default_chart_version=$chart_version-${{git_branch_name}}
+            chart_version=$chart_version-${{git_branch_name}}.${{git_checkout_sha_short}}
+            
+        
+            helm cm-push $service_name --version=$chart_version --app-version=$app_version codev-backend -f
+            helm cm-push $service_name --version=$default_chart_version --app-version=$app_version codev-backend -f
         done
 
