--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,7 +66,7 @@ jobs:
       run: |
         set -x
         cd chart
-        for service_name in `ls chart`; do
+        for service_name in `ls .`; do
             chart_path="$service_name/Chart.yaml"
             if [ ! -f $chart_path ];then
                 echo "$chart_path not exist"
