--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -76,7 +76,7 @@ jobs:
             app_version=`grep -e ^appVersion $chart_path|awk -F '[ |"]' '{if(NF>2){print $(NF-1)}else{print $NF}}'`
             chart_version=`grep -e ^version $chart_path|awk -F '[ |"]' '{if(NF>2){print $(NF-1)}else{print $NF}}'`
 
-            docker images
+            docker images -f "reference=$image_target"
             
             image_target="$IMAGE_REGISTRY_URL/$IMAGE_REGISTRY_NS/$service_name:$app_version-${{env.GIT_BRANCH_NAME}}.${{env.GIT_BRANCH_SAH_SHORT}}"
             image_exist=`docker images -f "reference=$image_target"|wc -l`
