--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -78,7 +78,7 @@ jobs:
             
             image_target="$IMAGE_REGISTRY_URL/$IMAGE_REGISTRY_NS/$service_name:$app_version-${{env.GIT_BRANCH_NAME}}.${{env.GIT_BRANCH_SAH_SHORT}}"
             # docker.io的Docker Hub会在docker images列表中默认不显示，所以需要支持一下
-            image_target_short="$service_name:$app_version-${{env.GIT_BRANCH_NAME}}.${{env.GIT_BRANCH_SAH_SHORT}}"
+            image_target_short="$IMAGE_REGISTRY_NS/$service_name:$app_version-${{env.GIT_BRANCH_NAME}}.${{env.GIT_BRANCH_SAH_SHORT}}"
 
             image_exist=`docker images -f "reference=$image_target" -f "reference=$image_target_short"|wc -l`
             if [[ $image_exist -lt 2 ]];then
