--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,8 +24,9 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: git@github.com:walkerdu/helm-charts.git
+        ref: master
         #token: ${{ secrets.PAT }}
-        #path: docs-dir
+        path: helm-charts
 
     - name: Set up Go
       uses: actions/setup-go@v4
