--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,10 +23,11 @@ jobs:
     - name: Checkout helm-charts repo
       uses: actions/checkout@v4
       with:
-        repository: walkerdu/helm-charts.git
+        repository: walkerdu/helm-charts
         ref: master
-        token: ${{ secrets.WALKERDU_REPO_PRIVATE_KEY }}
+        #ssh-key: ${{ secrets.WALKERDU_REPO_PRIVATE_KEY }}
         path: helm-charts
+        fetch-depth: 1
 
     - name: Set up Go
       uses: actions/setup-go@v4
