--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         repository: walkerdu/helm-charts
         ref: master
-        #ssh-key: ${{ secrets.WALKERDU_REPO_PRIVATE_KEY }}
+        ssh-key: ${{ secrets.WALKERDU_REPO_PRIVATE_KEY }}
         path: helm-charts
         fetch-depth: 1
 
