--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -121,7 +121,7 @@ jobs:
             git push origin master
 
             sed -i "/^version/ c\version: $default_chart_version" $helm_chart_dir/$service_name/Chart.yaml
-            git commit -m "refresh $service_name version:$chart_version appVersion: $app_version" .
+            git commit -m "refresh $service_name version:$default_chart_version appVersion: $app_version" .
             git push origin master
             
             cd -
